--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "vite build && cd dist && git init && git add -A && git commit -m 'deploy' && git push -f git@github.com:evgenybaulin/evgenybaulin.github.io.git main:gh-pages"
+    "deploy": "vite build && cd dist && git init && git add -A && git commit -m 'deploy' && git push -f git@github.com:evgenybaulin/evgenybaulin.github.io.git main:main"
   },
   "dependencies": {
     "axios": "^1.7.7",
