--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "vite build && cd dist && git init && git add -A && git commit -m 'deploy' && git push -f git@github.com:evgenybaulin/evgenybaulin.github.io.git main:main"
+    "preview": "vite preview"z
   },
   "dependencies": {
     "axios": "^1.7.7",
