--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "evgenybaulin.github.io",
+  "name": "my-portfolio",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "vue": "^3.5.12"
+    "lucide-vue-next": "^0.454.0",
+    "vue": "^3.4.21",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.4",
-    "vite": "^5.4.10"
+    "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "vite": "^5.1.6"
   }
 }
